--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -8,6 +8,8 @@
     -if user_signed_in?
       %span(class="header__right__login")
         = link_to  "投稿する", new_post_path, class: "post"
+        = current_user.nickname 
+        = link_to "マイページ", "/users/#{current_user.id}"
         = link_to "ログアウト", destroy_user_session_path, method: :delete
     -else
       %span(class="header__right__login")
@@ -21,19 +23,4 @@
         %li 本
         %li 経済
     .main__content
-      - @posts.each do |post|
-        .main__content__box
-          .main__content__box__item 
-            %img{src:"#{post.image}", alt:"画像"}/
-          .main__content__box__text
-            = simple_format(post.text)
-            = post.name 
-            %span(class="main__content__box__text__more")
-              %i.fa.fa-list-ul
-                %ul(class="main__content__box__text__more__list")
-                  %li
-                    =link_to '詳細', "/posts/#{post.id}"
-                  %li
-                    =link_to '編集', "/posts/#{post.id}/edit"
-                  %li
-                    =link_to '削除', "/posts/#{post.id}", method: :delete
+      =render partial: "post", collection: @posts
