--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -2,7 +2,4 @@
   .contents__box
     = form_with model: @post, local: true do |f| 
       %h3 投稿する
-      = f.text_field :name, placeholder: "name"
-      = f.text_field :image, placeholder: "image"
-      = f.text_area :text, placeholder: "text", rows: "10" 
-      = f.submit "SEND"
+      = render partial: "form", locals: { f: f }
