--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -1,3 +1,4 @@
+= f.text_field :title, placeholder: "title"
 = f.text_field :image, placeholder: "image"
 = f.text_area :text, placeholder: "text", rows: "10" 
 = f.submit "SEND"
