--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -9,6 +9,7 @@
       %span(class="main__content__box__text__more")
         %i.fa.fa-list-ul
           %ul(class="main__content__box__text__more__list")
+          -if user_signed_in? && current_user.id == @post.user_id
             %li
               =link_to '編集', "/posts/#{@post.id}/edit", method: :get
             %li
@@ -30,7 +31,7 @@
         %strong
           = link_to comment.user.nickname, "/users/#{comment.user_id}"
           ：
-        = comment.text
+          = comment.text
 
 
   =link_to 'トップページ', root_path
