--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -1,5 +1,5 @@
-.contents
-  .contents__box
+.contents_new
+  .contents_new__box
     = form_with model: @post, local: true do |f| 
       %h3 更新する
       = render partial: "form", locals: { f: f }
