--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -2,4 +2,5 @@
   .contents_new__box
     = form_with model: @post, local: true do |f| 
       %h3 更新する
-      = render partial: "form", locals: { f: f }
+      = render partial: "posts/index/form", locals: { f: f }
+      = link_to'投稿一覧へ戻る', root_path, class:'btn'
