--- a/app/views/posts/index/_post.html.haml
+++ b/app/views/posts/index/_post.html.haml
@@ -1,7 +1,8 @@
 .main__content__box
   .main__content__box__item 
     = post.title
-    %img{src:"#{post.image}", alt:"画像"}/
+    %iframe#ytplayer{:frameborder => "0", :height => "200", :src => "https://www.youtube.com/embed/#{post.video}", :type => "text/html", :width => "288"}
+
   .main__content__box__text
     = simple_format(post.text)
     %span  投稿者
