--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -5,7 +5,7 @@
 - @posts.each do |post|
   .main__content__box
   .main__content__box__item 
-    %img{src:"#{post.image}", alt:"画像"}/
+    %iframe#ytplayer{:frameborder => "0", :height => "400", :src => "https://www.youtube.com/embed/#{post.video}", :type => "text/html", :width => "600"}
   .main__content__box__text
     = simple_format(post.text)
     %span(class="main__content__box__text__more")
