--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -1,6 +1,7 @@
-.contents
-  .contents__box
-    = form_with model: @post, local: true do |f| 
-      %h3 投稿する
-      = render partial: "posts/index/form", locals: { f: f }
-      = link_to'投稿一覧へ戻る', root_path, class:'btn'
+.wrapper
+  = render 'posts/index/header'     
+  .contents
+    .contents__new
+      = form_with model: @post, local: true do |f| 
+        %h3 投稿する
+        = render partial: "posts/index/form", locals: { f: f }
