--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -1,6 +1,8 @@
-.contents_new
-  .contents_new__box
-    = form_with model: @post, local: true do |f| 
-      %h3 更新する
-      = render partial: "posts/index/form", locals: { f: f }
-      = link_to'投稿一覧へ戻る', root_path, class:'btn'
+.wrapper
+  = render 'posts/index/header' 
+  .contents_new
+    .contents_new__box
+      = form_with model: @post, local: true do |f| 
+        %h3 更新する
+        = render partial: "posts/index/form", locals: { f: f }
+        = link_to'投稿一覧へ戻る', root_path, class:'btn'
