--- a/app/views/posts/index/_header.html.haml
+++ b/app/views/posts/index/_header.html.haml
@@ -1,6 +1,7 @@
 .header
   .header__left
     <i class="fas fa-chess-queen"></i>
+    =link_to 'トップページ', root_path
   .header__title 
     = form_with(url: search_posts_path, local: true, method: :get, class: "search-form") do |form|
       = form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input"
