--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,20 +1,22 @@
-.main__content
-%p
-  = @nickname
-  さんの投稿一覧
-- @posts.each do |post|
-  .main__content__box
-  .main__content__box__item 
-    %iframe#ytplayer{:frameborder => "0", :height => "400", :src => "https://www.youtube.com/embed/#{post.video}", :type => "text/html", :width => "600"}
-  .main__content__box__text
-    = simple_format(post.text)
-    %span(class="main__content__box__text__more")
-      %i.fa.fa-list-ul
-        %ul(class="main__content__box__text__more__list")
-          %li
-          =link_to '詳細', "/posts/#{post.id}"
-          -if user_signed_in? && current_user.id == post.user_id  
-            %li
-            =link_to '編集', "/posts/#{post.id}/edit"
-            %li
-            =link_to '削除', "/posts/#{post.id}", method: :delete
+.wrapper
+  = render 'posts/index/header'   
+  .main_user
+    %p
+      = @nickname
+      さんの投稿一覧
+  - @posts.each do |post|
+    .main_user__box
+      .main_user__box__item 
+        %iframe#ytplayer{:frameborder => "0", :height => "400", :src => "https://www.youtube.com/embed/#{post.video}", :type => "text/html", :width => "600"}
+      .main_user__box__text
+        = simple_format(post.text)
+        %span(class=".main_user__box__text__more")
+          %i.fa.fa-list-ul
+            %ul(class=".main_user__box__text__more__list")
+              %li
+              =link_to '詳細', "/posts/#{post.id}"
+              -if user_signed_in? && current_user.id == post.user_id  
+                %li
+                =link_to '編集', "/posts/#{post.id}/edit"
+                %li
+                =link_to '削除', "/posts/#{post.id}", method: :delete
