--- a/app/views/posts/index/_main.html.haml
+++ b/app/views/posts/index/_main.html.haml
@@ -5,5 +5,5 @@
       %li お笑い
       %li 本
       %li 経済
-  .main__content
-    =render partial: "posts/index/post", collection: @posts
+  .contents
+    = render partial: "/posts/index/post", collection: @posts
