--- a/app/views/posts/index/_post.html.haml
+++ b/app/views/posts/index/_post.html.haml
@@ -1,17 +1,7 @@
-.main__content__box
-  .main__content__box__item 
-    = post.title
+.main__content
+  .main__content__video 
     %iframe#ytplayer{:frameborder => "0", :height => "200", :src => "https://www.youtube.com/embed/#{post.video}", :type => "text/html", :width => "288"}
-
-  .main__content__box__text
-    = simple_format(post.text)
-    %span  投稿者
+  .main__content__title
+    =link_to "#{post.title}", "/posts/#{post.id}"
+  .main__content__user
     =link_to "#{post.user.nickname}", "/users/#{post.user.id}"
-    %span(class="main__content__box__text__more")
-      %i.fa.fa-list-ul
-        %ul(class="main__content__box__text__more__list")
-          %li
-          =link_to '詳細', "/posts/#{post.id}"
-          -if user_signed_in? && current_user.id == post.user_id
-            %li
-            =link_to '編集', "/posts/#{post.id}/edit"
