--- a/app/views/posts/index/_header.html.haml
+++ b/app/views/posts/index/_header.html.haml
@@ -6,9 +6,9 @@
     = form_with(url: search_posts_path, local: true, method: :get, class: "search-form") do |form|
       = form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input"
       = form.submit "検索", class: "search-btn"
-  -@posts.each do |post|
-    .search_groups
-      %input{name: post.id, type: "hidden", value: post.title}
+  -# -@posts.each do |post|
+  -#   .search_groups
+  -#     %input{name: post.id, type: "hidden", value: post.title}
       
   
     
