--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,8 @@
 @import "reset";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "index";
+@import "wrapper";
+@import "header";
+@import "main";
+@import "show";
 @import "flash";
