--- a/app/views/posts/index/_main.html.haml
+++ b/app/views/posts/index/_main.html.haml
@@ -6,4 +6,6 @@
       %li 本
       %li 経済
   .contents
+    .main-space
+      %h1 あなたへのおすすめ
     = render partial: "/posts/index/post", collection: @posts
