--- a/app/views/posts/index/_header.html.haml
+++ b/app/views/posts/index/_header.html.haml
@@ -2,9 +2,9 @@
   .header__left
     <i class="fas fa-chess-queen"></i>
     =link_to 'トップページ', root_path
-  .header__title 
+  .header__search 
     = form_with(url: search_posts_path, local: true, method: :get, class: "search-form") do |form|
-      = form.text_field :keyword, placeholder: "投稿を検索する", class: "search-input"
+      = form.text_field :keyword, placeholder: "検索", class: "search-input"
       = form.submit "検索", class: "search-btn"
   -# -@posts.each do |post|
   -#   .search_groups
