--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,36 +1,46 @@
 .wrapper
   = render 'posts/index/header'  
-  .show-main
-    .show-main__content
-      .show-main__content__item   
-        %iframe#ytplayer{:frameborder => "0", :height => "500", :src => "https://www.youtube.com/embed/#{@post.video}", :type => "text/html", :width => "800"}
-      .show-main__content__text
-        = simple_format(@post.text)
-        %span  投稿者
-        =link_to "#{@post.user.nickname}", "/users/#{@post.user.id}"
-        %span(class="show-main__content__text__more")
-          %i.fa.fa-list-ul
-            %ul(class="show-main__content__text__more__list")
+  .show
+    .show-main
+      .show-main__content
+        .show-main__content__item   
+          %iframe#ytplayer{:frameborder => "0", :height => "550", :width => "960", :src => "https://www.youtube.com/embed/#{@post.video}", :type => "text/html"}
+        .show-main__content__title
+          = @post.title
+          .date_edit
+            .created_date
+              = @post.created_at.strftime('%Y/%m/%d')
+            %i.icon.fa.fa-list-ul
             -if user_signed_in? && current_user.id == @post.user_id
-              %li
-                =link_to '編集', "/posts/#{@post.id}/edit"
-              %li
-                =link_to '削除', "/posts/#{@post.id}", method: :delete
-      .container
-      - if current_user
-        = form_with model: [@post, @comment], local: true, id: "new_comment" do |form|
-          = form.text_area :text, placeholder: "コメントする", rows: "2", class: "text_box"
-          = form.submit "SEND", class: "form_submit"
-      - else
-        %strong
-          %p ※※※ コメントの投稿には新規登録/ログインが必要です ※※※
-
-    .comments
-      %h4 ＜コメント一覧＞
-      - if @comments
-        - @comments.each do |comment|
-          %p
+              %ul.icon_list
+                %li
+                  =link_to '編集', "/posts/#{@post.id}/edit",class: "edit"
+                %li
+                  =link_to '削除', "/posts/#{@post.id}", method: :delete,class:"deleat"
+        .user_name  
+          投稿者
+          =link_to "#{@post.user.nickname}", "/users/#{@post.user.id}",class: "user-name"
+        
+        .show-main__content__text
+          = simple_format(@post.text)
+        
+        .container
+          - if current_user
+            = form_with model: [@post, @comment], local: true, id: "new_comment" do |form|
+              = form.text_area :text, placeholder: "コメントする", rows: "2", class: "text_box"
+              = form.submit "SEND", class: "form_submit"
+          - else
             %strong
-              = link_to comment.user.nickname, "/users/#{comment.user_id}"
-              ：
-              = comment.text  
+              %p ※※※ コメントの投稿には新規登録/ログインが必要です ※※※
+
+      .comments
+        %h4 ＜コメント一覧＞
+        - if @comments
+          - @comments.each do |comment|
+            %p
+              %strong
+                = link_to comment.user.nickname, "/users/#{comment.user_id}"
+                ：
+                = comment.text 
+    .show-right
+      .show-right__group
