--- a/app/views/posts/index/_main.html.haml
+++ b/app/views/posts/index/_main.html.haml
@@ -1,10 +1,21 @@
 .main
   .main__side
+    .sport スポーツ
     %ul
-      %li スポーツ
-      %li お笑い
-      %li 本
-      %li 経済
+      %li サッカー
+      %li バスケ
+      %li 野球
+      %li バレー
+
+    .comedy お笑い
+    %ul
+      %li コント
+      %li 一発芸
+    .book  本
+
+    .Economy 経済
+    %ul
+      %li まこなり社長
   .contents
     .main-space
       %h1 あなたへのおすすめ
