--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -1,8 +1,20 @@
 .wrapper
   = render 'posts/index/header' 
-  .contents_new
-    .contents_new__box
-      = form_with model: @post, local: true do |f| 
-        %h3 更新する
-        = render partial: "posts/index/form", locals: { f: f }
-        = link_to'投稿一覧へ戻る', root_path, class:'btn'
+  .main
+    .main__side
+      .sport 
+        =link_to "#{@sport.name}", category_path(@sport.id)
+      .comedy 
+        =link_to "#{@comedy.name}", category_path(@comedy.id)
+      .book 
+        =link_to "#{@book.name}", category_path(@book.id)
+      .economy
+        =link_to "#{@economy.name}", category_path(@economy.id)
+      .people
+        =link_to "#{@makonari.name}", category_path(@makonari.id)
+    .contents_new
+      .contents_new__box
+        = form_with model: @post, local: true do |f| 
+          %h3 更新する
+          = render partial: "posts/index/form", locals: { f: f }
+          = link_to'投稿一覧へ戻る', root_path, class:'btn'
