--- a/app/views/posts/index/_header.html.haml
+++ b/app/views/posts/index/_header.html.haml
@@ -14,11 +14,14 @@
     
   .header__right  
   -if user_signed_in?
+    = render "users/stats"
+    = render "users/follow_form"
     %span(class="header__right__login")
       = link_to  "投稿する", new_post_path, class: "post"
       = current_user.nickname 
       = link_to "マイページ", "/users/#{current_user.id}"
       = link_to "ログアウト", destroy_user_session_path, method: :delete
+      .side_user
   -else
     %span(class="header__right__login")
       = link_to "新規登録", new_user_registration_path, class: 'post'
