--- a/app/views/posts/index/_header.html.haml
+++ b/app/views/posts/index/_header.html.haml
@@ -1,7 +1,10 @@
 .header
   .header__left
-    <i class="fas fa-chess-queen"></i>
-    =link_to 'トップページ', root_path
+    .left-menu
+      <i class="fas fa-grip-lines"></i>
+    =link_to root_path, class: "youtube" do
+      <i class="fab fa-youtube"></i>
+      %span.youtube__text YouTube
   .header__search 
     = form_with(url: search_posts_path, local: true, method: :get, class: "search-form") do |form|
       = form.text_field :keyword, placeholder: "検索", class: "search-input"
