--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -28,13 +28,18 @@
     }
     .search-form {
       padding-left: 140px;
+      display: flex;
       .search-input {
+        opacity: 0.7;
+        padding-left: 12px;
         width: 550px;
         height: 33px;
       }
       .search-btn {
-        height: 35px;
-        width: 40px;
+        height: 32px;
+        width: 60px;
+        opacity: 0.5;
+        font-size: 13px;
       }
     }
 
