--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -9,20 +9,48 @@
   .user-main {
     width: 90%;
     height: 100%;
-    background-color: rgb(248, 246, 245);
-    padding: 20px 50px 0 50px;
     overflow: scroll;
-    .user-image {
-      width: 100%;
-      height: 100px;
-    }
-    }
     .user-top {
-      width: 100%;
-      height: 95px;
+      width: auto;
+      &__image {
+        background-color: rgb(255, 255, 255);
+        width: 1200px;
+        height: 190px;
+      }
+      &__bottom {
+        background-color: rgb(250, 250, 250);
+        width: 100%;
+        height: 160px;
+        display: flex;
+        &__left {
+          text-align: center;
+          padding-top: 50px;
+          width: 20%;
+            .user-edit {
+              padding-top: 20px;
+            }
+        }
+        &__right {
+          width: 100%;
+          &__top {
+            text-align: left;
+            font-size: 25px;
+            padding-top: 20px;
+
+          }
+          &__bottom {
+            text-align: center;
+            height: 100px;
+            overflow: scroll;
+          }
+        }
+      }
     }
     .user-box {
+      padding: 50px 50px 0 50px;
+      background-color: rgb(233, 233, 233);
       width: 100%;
+      height: auto;
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
@@ -56,3 +84,4 @@
       }
     }
   } 
+}
