--- a/app/views/posts/index/_header.html.haml
+++ b/app/views/posts/index/_header.html.haml
@@ -8,24 +8,25 @@
   .header__search 
     = form_with(url: search_posts_path, local: true, method: :get, class: "search-form") do |form|
       = form.text_field :keyword, placeholder: "検索", class: "search-input"
-      = form.submit "検索", class: "search-btn"
-  -# -@posts.each do |post|
-  -#   .search_groups
-  -#     %input{name: post.id, type: "hidden", value: post.title}
-      
-  
-    
-  .header__right  
+      %button.search-btn{:type => "submit"}
+        %i.fas.fa-search
+
+      -# = form.submit "検索", class: "search-btn"
+  .header__right
   -if user_signed_in?
     = render "users/stats"
     = render "users/follow_form"
-    %span(class="header__right__login")
+    %span.header__right__login
       = link_to  "投稿する", new_post_path, class: "post"
       = current_user.nickname 
-      = link_to "マイページ", "/users/#{current_user.id}"
+      = link_to "/users/#{current_user.id}" do
+        - if current_user.image.present?
+          = image_tag current_user.image.url, class: 'user-image',size: "30x30"
+        -else
+          マイページ
       = link_to "ログアウト", destroy_user_session_path, method: :delete
       .side_user
   -else
-    %span(class="header__right__login")
+    %span.header__right__login
       = link_to "新規登録", new_user_registration_path, class: 'post'
       = link_to "ログイン", new_user_session_path, class: 'post'
