--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -14,9 +14,20 @@
         =link_to "#{@makonari.name}", category_path(@makonari.id)
       .show-left__group
     .user-main
-      .user-image
       .user-top
-        %h1= "#{@nickname}さんの投稿一覧"
+        .user-top__image
+          -# = image_tag "#", size: "1124x200"
+        .user-top__bottom
+          .user-top__bottom__left
+            - if @image.present?
+              = image_tag @image.url, class: 'user-image', width: '50%',height:'50%'
+            .user-edit
+              = link_to "プロフィール変更", "/users/#{@user.id}/edit"
+          .user-top__bottom__right
+            .user-top__bottom__right__top
+              %h1= "#{@nickname}の投稿一覧"
+            .user-top__bottom__right__bottom
+              = simple_format(@profile) 
       .user-box
         - @posts.each do |post|
           .user-posts 
