--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -69,6 +69,9 @@
         margin: 10px;
         border-bottom: 1px solid;
         opacity: 0.7;
+        overflow: scroll;
+        
+        text-align: center;
 
       }
       
