--- a/app/views/posts/index/_header.html.haml
+++ b/app/views/posts/index/_header.html.haml
@@ -13,21 +13,19 @@
 
       -# = form.submit "検索", class: "search-btn"
   .header__right
-  -if user_signed_in?
-    = render "users/stats"
-    = render "users/follow_form"
-    %span.header__right__login
-      = link_to  "投稿", new_post_path, class: "post"
-      = current_user.nickname 
-      = link_to "/users/#{current_user.id}" do
-        %sapn.user_icon
-          - if current_user.image.present?
-            = image_tag current_user.image.url, class: 'user-image',size: "30x30"
-          -else
-            マイページ
-      = link_to "ログアウト", destroy_user_session_path, method: :delete
-      .side_user
-  -else
-    %span.header__right__login
-      = link_to "新規登録", new_user_registration_path, class: 'post'
-      = link_to "ログイン", new_user_session_path, class: 'post'
+    -if user_signed_in?
+      %span.header__right__login
+        = link_to  "投稿", new_post_path, class: "post"
+        = current_user.nickname 
+        = link_to "/users/#{current_user.id}" do
+          %sapn.user_icon
+            - if current_user.image.present?
+              = image_tag current_user.image.url, class: 'user-image',size: "30x30"
+            -else
+              マイページ
+        = link_to "ログアウト", destroy_user_session_path, class: "logout", method: :delete
+        .side_user
+    -else
+      %span.header__right__login
+        = link_to "新規登録", new_user_registration_path, class: 'post'
+        = link_to "ログイン", new_user_session_path, class: 'post'
