--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -75,6 +75,15 @@
 }
 .logout:hover {
   background: rgb(255, 190, 137);
-
   opacity: 0.7;
+}
+.youtube__text:hover {
+  background: rgb(255, 190, 137);
+  opacity: 0.7;
+}
+.user-icon {
+  width: 30px;
+  height: 30px;
+  border-radius: 100px;
+  object-fit: cover;
 }
