--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -24,7 +24,7 @@
         display: flex;
         &__left {
           text-align: center;
-          padding-top: 50px;
+          padding-top: 10px;
           width: 20%;
             .user-edit {
               padding-top: 20px;
@@ -84,4 +84,10 @@
       }
     }
   } 
+}
+.user-image {
+  width: 100px;
+  height: 100px;
+  border-radius: 100px;
+  object-fit: cover;
 }
