--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -11,7 +11,7 @@
       .economy
         =link_to "#{@economy.name}", category_path(@economy.id)
       .people
-        =link_to "#{@makonari.name}", category_path(@makonari.id)
+        =link_to "#{@honda.name}", category_path(@honda.id)
     .contents
       .main-space
         %h1= @category
