--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -11,7 +11,7 @@
       .categories
         =link_to "#{@economy.name}", category_path(@economy.id),class:"category-name1"
       .categories
-        =link_to "#{@makonari.name}", category_path(@makonari.id),class:"category-name1"
+        =link_to "#{@honda.name}", category_path(@honda.id),class:"category-name1"
     .user-main
       .user-top
         .user-top__image
