--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -11,7 +11,7 @@
       .categories
         =link_to "#{@economy.name}", category_path(@economy.id),class:"category-name1"
       .categories
-        =link_to "#{@makonari.name}", category_path(@makonari.id),class:"category-name1"
+        =link_to "#{@honda.name}", category_path(@honda.id),class:"category-name1"
     .contents_new
       .content_box 
         = form_with model: @post, local: true do |f| 
