--- a/app/views/posts/search.html.haml
+++ b/app/views/posts/search.html.haml
@@ -11,6 +11,6 @@
       .categories
         =link_to "#{@economy.name}", category_path(@economy.id),class:"category-name1"
       .categories
-        =link_to "#{@makonari.name}", category_path(@makonari.id),class:"category-name1"
+        =link_to "#{@honda.name}", category_path(@honda.id),class:"category-name1"
     .contents
       = render partial: "/posts/index/post", collection: @posts
