--- a/app/views/posts/index/_form.html.haml
+++ b/app/views/posts/index/_form.html.haml
@@ -3,6 +3,18 @@
 .form__field
   = f.text_field :video, placeholder: "videoID"
 .form__field
+  スタート
+  = f.number_field :starta, placeholder: "分"
+  %span 分
+  %span= f.number_field :startb, placeholder: "秒"
+  %span 秒
+.form__field
+  ストップ
+  = f.number_field :enda, placeholder: "分"
+  %span 分
+  %span= f.number_field :endb, placeholder: "秒"
+  %span 秒
+.form__field
   = f.text_area :text, placeholder: "text", rows: "10" 
 .form__field
   = f.collection_check_boxes :category_ids, Category.all, :id, :name do |category|
