--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,15 +1,16 @@
 .main {
   height: 90vh;
   width: 100%;
+  margin: auto;
   display: flex;
-
-  &__side {
+  .main__side {
     width: 236px;
     height: auto;
     padding-left: 30px; 
     padding-top: 30px;
   }
   .contents  {
+
     height: 100%;
     width: 100%;
     display: flex;
