--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -1,14 +1,16 @@
 
-.show {
+.main {
   height: 90vh;
   width: 100%;
+  margin: auto;
   display: flex;
-  &__left {
+  &__side {
     width: 16%;
   }
   .user-main {
     width: 90%;
     height: 100%;
+    margin: auto;
     overflow: scroll;
     .user-top {
       width: auto;
@@ -30,19 +32,32 @@
               padding-top: 20px;
             }
         }
-        &__right {
-          width: 100%;
-          &__top {
-            text-align: left;
-            font-size: 25px;
-            padding-top: 20px;
-
+        &__center {
+          text-align: center;
+          font-size: 25px;
+          padding-top: 20px;
+          .twiter {
+            color: rgb(0, 180, 240);
+            cursor: pointer;
+            padding-top: 10px;
           }
-          &__bottom {
-            text-align: center;
-            height: 100px;
-            overflow: scroll;
+          .instagram {
+            color: rgb(123, 59, 168);
+            cursor: pointer;
           }
+          .facebook{
+            color: rgb(0, 49, 185);
+            cursor: pointer;
+          }
+        }
+        &__bottom {
+          margin-left: 40px;
+          margin-top: 10px;
+          border: 1px solid black;
+          text-align: center;
+          height: 150px;
+          width: 500px;
+          overflow: scroll;
         }
       }
     }
