--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -48,40 +48,35 @@
     font-size: 20px;
     &__login {
       color: black;
-      
-      
       .user_icon {
         .user-image {
           border-radius: 50px 50px;
         }
-      }
-      
+      } 
     }
   }
   }
 }
 .post {
   color: black;
-
 }
 .post:hover {
   background: rgb(255, 190, 137);
-
   opacity: 0.7;
-
 }
 .logout {
   color: black;
 }
 .logout:hover {
   background: rgb(255, 190, 137);
-  opacity: 0.7;
+  opacity: 0.4;
 }
 .youtube__text:hover {
   background: rgb(255, 190, 137);
-  opacity: 0.7;
+  opacity: 0.4;
 }
 .user-icon {
+  cursor: pointer;
   width: 30px;
   height: 30px;
   border-radius: 100px;
