--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -5,12 +5,15 @@
   display: flex;
   .main__side {
     width: 236px;
-    height: auto;
-    padding-left: 30px; 
+    height: auto; 
+    text-align: center;
     padding-top: 30px;
+    .categories {
+      width: 100%;
+      height: 30px;
+    }
   }
-  .contents  {
-
+  .contents {
     height: 100%;
     width: 100%;
     display: flex;
@@ -65,9 +68,9 @@
   color: black;
   font-size: 16px;
 }
-.category-name1:hover {
-  background: rgb(255, 190, 137);
-  opacity: 0.7;
+.categories:hover {
+  background: rgb(189, 189, 189);
+  opacity: 0.3;
 }
 .categories {
   margin-top: 10px;
