--- a/app/assets/stylesheets/new.scss
+++ b/app/assets/stylesheets/new.scss
@@ -1,7 +1,8 @@
 .contents_new {
   height: 65vh;
   width: 100%;
-  margin-top: 150px;
+  margin-top: 100px;
+  background-color: rgb(248, 246, 245);
   .content_box {
     display: flex;
     align-items: center;
