--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -2,17 +2,15 @@
   height: 90vh;
   width: 100%;
   display: flex;
-  .main__side {
-    width: 236px;
-    height: auto;
-    padding-left: 30px; 
-    padding-top: 30px;
-  }
   .show-main {
-    width: 70%;
+    width: 100%;
     overflow: scroll;
+    margin: 0 auto;
+    background-color: rgb(248, 246, 245);
     &__content {
       padding: 25px;
+      margin: 0 50px;
+      text-align: center;
       &__item {
         
       }
@@ -25,7 +23,6 @@
         border-bottom: 1px solid ;
       }
         .date_edit{
-          background-color: seashell;
           display: flex;
           justify-content: space-between;
           .created_date {
