--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -61,19 +61,20 @@
   color: black;
 }
 .post:hover {
-  background: rgb(255, 190, 137);
-  opacity: 0.7;
+  background: rgb(189, 189, 189);
+  opacity: 0.3;
 }
 .logout {
   color: black;
 }
 .logout:hover {
-  background: rgb(255, 190, 137);
-  opacity: 0.4;
+  background: rgb(189, 189, 189);
+  opacity: 0.3;
 }
 .youtube__text:hover {
-  background: rgb(255, 190, 137);
-  opacity: 0.4;
+  background: rgb(189, 189, 189);
+  opacity: 0.3;
+  cursor: pointer;
 }
 .user-icon {
   cursor: pointer;
