--- a/app/views/users/_stats.html.haml
+++ b/app/views/users/_stats.html.haml
@@ -1,6 +1,8 @@
 - @user ||= current_user
-%div
-  = link_to following_user_path(@user) do
+.follow_follower
+  = link_to following_user_path(@user),class:"follow_follower" do
+    フォロー:
     = @user.following.count
-  = link_to followers_user_path(@user) do
+  = link_to followers_user_path(@user),class:"follow_follower" do
+    フォロワー:
     = @user.followers.count
