--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -9,18 +9,21 @@
     .left-menu {
       cursor: pointer;
       display: inline;
-    }
-    .youtube {
-      padding-left: 30px;
-      display: inline;
-      font-size: 25px;
-      color: rgb(0, 47, 255);
-      text-decoration: none;
-      &__text {
+      .youtube {
+        padding-left: 30px;
+        display: inline;
         font-size: 25px;
-        color: black;
-        font-family: sans-serif	
+        color: rgb(0, 47, 255);
+        text-decoration: none;
+        &__text {
+          font-size: 25px;
+          color: black;
+          font-family: sans-serif	
+        }
       }
+    }
+    #datetime {
+      
     }
   }  
   &__search  {
@@ -28,7 +31,6 @@
       outline: 1px #3f528f solid;
     }
     .search-form {
-      padding-left: 140px;
       display: flex;
       .search-input {
         opacity: 0.7;
