--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -12,11 +12,12 @@
     height: 100%;
     margin: auto;
     overflow: scroll;
+    text-align: center;
     .user-top {
       width: auto;
       &__image {
         background-color: rgb(255, 255, 255);
-        width: 1200px;
+        width: 100%;
         height: 190px;
       }
       &__bottom {
@@ -24,17 +25,17 @@
         width: 100%;
         height: 160px;
         display: flex;
+        justify-content: space-evenly;
         &__left {
           text-align: center;
           padding-top: 10px;
-          width: 20%;
-            .user-edit {
-              padding-top: 20px;
-            }
+          .user-edit {
+            padding-top: 20px;
+          }
         }
         &__center {
           text-align: center;
-          font-size: 25px;
+          font-size: 20px;
           padding-top: 20px;
           .twiter {
             color: rgb(0, 180, 240);
@@ -51,13 +52,26 @@
           }
         }
         &__bottom {
-          margin-left: 40px;
           margin-top: 10px;
           border: 1px solid black;
+          height: 130px;
+          width: 300px;
           text-align: center;
-          height: 150px;
-          width: 500px;
           overflow: scroll;
+        }
+        &__right {
+          width: 25%;
+          padding-top: 20px;
+          .todo_form {
+
+          }
+          .todo-box {
+            .delete {
+              color: black;
+              opacity: 0.4;
+              font-size: 12px;
+            }
+          }
         }
         
       }
@@ -110,4 +124,8 @@
 .follow_follower {
   font-size: 15px;
   color: black;
+}
+.user-image2 {
+  width: 100%;
+  height: 190px;
 }
